// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util/http/index get 1`] = `
Object {
  "body": "",
  "headers": Object {},
}
`;

exports[`util/http/index getJson 1`] = `
Object {
  "body": Object {
    "test": true,
  },
  "headers": Object {},
}
`;

exports[`util/http/index postJson 1`] = `
Object {
  "body": Object {},
  "headers": Object {
    "content-type": "application/json",
  },
}
`;
